# whylabs-snowflake-integration

./: .gitignore  Makefile  README.md  TODO.md  eval.py  generate-data.py  mypy.ini  profile.base64  pyproject.toml  sleepy.py  test.py
.github/workflows/: workflow.yml
scripts/: merger.py  print_profile.py  print_profile_bin.py  remove_relative_imports.py
sql/: create-dummy-data.sql  create-udf.sql  demo.sql  dev.sql  examples.sql  integration-permissions.sql  integrations.sql  networking.sql  put-udf.sql  run-udf.sql  secrets.sql  snowflake-inserts.sql  storage.sql
tests/udfs/: test_util.py
udfs/: config.py  udf_utils.py  util.py  version.py  whylabs_upload_udf.py  whylogs_array_udf.py  whylogs_chunk_udf.py  whylogs_object_udf.py  whylogs_udf.py
