[tool.poetry]
name = "whylogs-snowflake"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
whylogs = "^1.3.7"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
faker = "^19.6.2"
pinliner = {git = "https://github.com/Akrog/pinliner.git"}
pytest = "^7.4.2"
autoflake = "2.0.1"
astunparse = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
